Fixed bug when tabs remain locked in single mode; fixed bug with overflowing sequence in single mode

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -658,6 +658,7 @@ body {
 }
 
 #output_textarea {
+  position: relative;
   max-width: calc(100% - 0.04rem) !important;
   white-space: pre;
   overflow-x: scroll;
